        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=16078
        Google Maps zooming via the scroll wheel (almost) always zooms IN only.

        * dom/WheelEvent.cpp: (WebCore::WheelEvent::WheelEvent):
        Ensure that delta is never rounded down to zero - we are getting values less than 1 from
        many mice on OS X, and Google Maps code assumes scrolling down if event.wheelDelta is zero.



Canonical link: https://commits.webkit.org/22610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28745 268f45cc-cd09-0410-ab3c-d52691b4dbfc